--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 			</nav>
 
 			<img src="images/logo.jpg" alt="logo MANDY" class="logo">
+
+			<a href src="#" class="ion-ios-cart-outline" ></a>
+
+
 		</header>
 
 		<!-- banner -->
