Home con about y categorias

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 				<span class="ion-navicon-round"></span>
 			</label>
 
+			<!-- NAV -->
+
 			<nav class="main-nav">
 
 				<label class="close-nav" for="open-nav">
@@ -64,11 +66,11 @@
 
 				<div class="intro-center">
 
-					<h2>Apoya talento local<br><span>independiente</span></h2>
+					<h2>Talento local<br><span>independiente</span></h2>
 
 					<form class="main-searchbar" action="" method="get">
 
-						<input type="text" name="main-searchbar" placeholder="Busca aquí">
+						<input type="text" name="main-searchbar" placeholder="Descúbrelo">
 
 					</form>
 
@@ -78,57 +80,95 @@
 
 		</section>
 
-		<!-- productos -->
-		<section class="vip-products">
-			<article class="product">
-				<img src="images/img-pdto-1.jpg" alt="pdto 01">
-				<h2>Lorem ipsum amet</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-				<a href="#">ver más</a>
-			</article>
-			<article class="product">
-				<img src="images/img-pdto-2.jpg" alt="pdto 02">
-				<h2>Lorem ipsum amet</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-				<a href="#">ver más</a>
-			</article>
-			<article class="product">
-				<img src="images/img-pdto-3.jpg" alt="pdto 03">
-				<h2>Lorem ipsum amet</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-				<a href="#">ver más</a>
-			</article>
-			<article class="product">
-				<img src="images/img-pdto-1.jpg" alt="pdto 01">
-				<h2>Lorem ipsum amet</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-				<a href="#">ver más</a>
-			</article>
-			<article class="product">
-				<img src="images/img-pdto-2.jpg" alt="pdto 02">
-				<h2>Lorem ipsum amet</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-				<a href="#">ver más</a>
-			</article>
-			<article class="product">
-				<img src="images/img-pdto-3.jpg" alt="pdto 03">
-				<h2>Lorem ipsum amet</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-				<a href="#">ver más</a>
-			</article>
+
+		<!-- CATEGORÍAS -->
+
+		<section class="about">
+			<p>Bienvenido a la plataforma donde <span>artistas locales</span> pueden mostrar y ofrecer a lo que le dedican tanto esfuerzo</p>
 		</section>
 
-		<footer class="main-footer">
-			<ul>
-				<li><a href="#">home</a></li>
-				<li><a href="#">quienes</a></li>
-				<li><a href="#">servicios</a></li>
-				<li><a href="#">portfolio</a></li>
-				<li><a href="#">sucursales</a></li>
-				<li><a href="#">contacto</a></li>
-			</ul>
-		</footer>
+
+		<section class="seccion">
+
+			<div class="section-title">
+				<h3>Categorías</h3>
+				<img src="images/separator.png" alt="Separator">
+				<p>Podrás encontrar desde artes plásticas hasta ropa:</p>
+			</div>
+
+			<article class="categoria">
+				<span class="imagen-categoria"></span>
+				<a href="#">
+					<h4>Pintura</h4>
+				</a>
+			</article>
+
+			<article class="categoria">
+				<a href="#">
+					<h4>Ilustración</h4>
+				</a>
+				<span class="imagen-categoria"></span>
+			</article>
+
+			<article class="categoria">
+				<span class="imagen-categoria"></span>
+				<a href="#">
+					<h4>Escultura</h4>
+				</a>
+			</article>
+
+
+			<article class="categoria">
+				<a href="#">
+					<h4>Fotografía</h4>
+				</a>
+				<span class="imagen-categoria"></span>
+			</article>
+
+			<article class="categoria">
+				<span class="imagen-categoria"></span>
+				<a href="#">
+					<h4>Joyería</h4>
+				</a>
+			</article>
+
+			<center>
+				<a class="ver-mas">
+					Ver más categorías
+				</a>
+			</center>
+
+		</section>
+
+
+		<section class="seccion artistas-destacados">
+
+			<div class="section-title">
+				<h3>Artistas destacados</h3>
+				<img src="images/separator.png" alt="Separator">
+				<p>Podrás encontrar desde artes plásticas hasta ropa:</p>
+			</div>
+
+			<center>
+				<a class="ver-mas">
+					Ver más categorías
+				</a>
+			</center>
+
+		</section>
+
 	</div>
+
+	<footer class="main-footer">
+		<ul>
+			<li><a href="#">home</a></li>
+			<li><a href="#">quienes</a></li>
+			<li><a href="#">servicios</a></li>
+			<li><a href="#">portfolio</a></li>
+			<li><a href="#">sucursales</a></li>
+			<li><a href="#">contacto</a></li>
+		</ul>
+	</footer>
 
 	</body>
 </html>
