agregar id a logo y imagines

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/ionicons-2.0.1/css/ionicons.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style-nonsass.css" rel="stylesheet">
 
 		<title>Mandy.com - Compra arte independiente local</title>
 	</head>
@@ -46,7 +47,7 @@
 
 			</nav>
 
-			<a href="index.html">
+			<a id="logo" href="index.html">
 				<h1>Mandy</h1>
 			</a>
 
@@ -89,7 +90,6 @@
 
 
 		<section class="seccion">
-
 			<div class="section-title">
 				<h3>Categorías</h3>
 				<img src="images/separator.png" alt="Separator">
